--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -63,6 +63,7 @@
 
 .videoSobre-video {
     flex-grow: 1;
+    flex-shrink: 2;
 }
 
 
@@ -113,5 +114,13 @@
 
     .cabecalhoPrincipal-nav-link-app {
         order: -1;
+    }
+
+    .videoSobre .container {
+        flex-direction: column;
+    }
+
+    .videoSobre-video {
+        margin: 0 auto;
     }
 }
